--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,10 @@ jobs:
       - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
-          capacity-provider-strategy: >-
-            capacityProvider=FARGATE,weight=1
-            capacityProvider=FARGATE_SPOT,weight=1
-          cluster: $CLUSTER_NAME
-          launch-type: ''
-          security-group-ids: $SECURITY_GROUP_IDS_FETCHED
+          cluster: ecs-fargate
+          security-group-ids: $SECURITY_GROUP_IDS
           subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
-          task-definition: $My_Task_Def
+          task-definition: fargate-task
 workflows:
   run-task:
     jobs:
