--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   run-task:
     docker:
-      - image: 'cimg/node:9.9.0'
+      - image: 'cimg/python:3.7-stretch'
     steps:
       - aws-ecs/run-task:
           cluster: $ECS_PARAM_CLUSTER_NAME
