--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,13 @@
 version: '2.1'
 orbs:
   aws-ecs: circleci/aws-ecs@2.0
+deploy:
+    docker:
+      - image: cibuilds/aws:1.16.1  
 jobs:
   run-task:
     docker:
-      - image: 'cimg/node:9.9.0'
+      - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
           cluster: $ECS_PARAM_CLUSTER_NAME
