--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ deploy:
 jobs:
   run-task:
     docker:
+      - image: cibuilds/aws:1.16.1  
       - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
