--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,10 @@ jobs:
       - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
-          cluster: $ECS_PARAM_CLUSTER_NAME
+          cluster: ecs-fargate
           security-group-ids: $SECURITY_GROUP_IDS
           subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
-          task-definition: $My_Task_Def
+          task-definition: fargate-task
 workflows:
   run-task:
     jobs:
