--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
-          capacity-provider-strategy: >-
+          capacity-provider-strategy:
             capacityProvider=FARGATE,weight=1
             capacityProvider=FARGATE_SPOT,weight=1
           cluster: ecs-fargate
