--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,7 @@ jobs:
       - image: 'cimg/python:3.9.1'
     steps:
       - aws-ecs/run-task:
-          capacity-provider-strategy:
-            capacityProvider=FARGATE,weight=1
-            capacityProvider=FARGATE_SPOT,weight=1
+          capacity-provider-strategy: capacityProvider=FARGATE,weight=1 capacityProvider=FARGATE_SPOT,weight=1
           cluster: ecs-fargate
           launch-type: ''
           security-group-ids: $SECURITY_GROUP_IDS_FETCHED
