--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,15 @@ jobs:
             capacityProvider=FARGATE,weight=1
             capacityProvider=FARGATE_SPOT,weight=1
           cluster: ecs-fargate
+          count: 4
           launch-type: ''
           security-group-ids: $SECURITY_GROUP_IDS_FETCHED
           subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
           task-definition: fargate-webapp-task
+      - run:
+          command: >
+            $BASH_ENV
+            export TERM=xterm
           
 workflows:
   run-task:
