--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           cluster: ecs-fargate
           count: 4
           launch-type: ''
-          security-group-ids: $SECURITY_GROUP_IDS_FETCHED
+          security-group-ids: $SECURITY_GROUP_IDS
           subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
           task-definition: fargate-webapp-task
           assign-public-ip : ENABLED         
