--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
   run-task:
     docker:
       - image: cibuilds/aws:2.1.27
+      - image: cimg/python:3.8
     steps:
       - aws-ecs/run-task:
           capacity-provider-strategy: >-
