--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,48 @@
-version: 2.1
-
+version: '2.1'
 orbs:
-  aws-ecr: circleci/aws-ecr@6.2.0
-  aws-ecs: circleci/aws-ecs@2.0.0
+  aws-ecs: circleci/aws-ecs@2.0
+  aws-cli: circleci/aws-cli@1.3
+  orb-tools: circleci/orb-tools@10.0
+  shellcheck: circleci/shellcheck@2.2
+  jq: circleci/jq@2.2.0
+
+jobs:   
+  test-fargatespot:
+      docker:
+        - image: cimg/base:stable
+      steps:
+        - aws-cli/setup
+        - jq/install
+        - run:
+            name: Get cluster info
+            command: |
+              SERVICES_OBJ=$(aws ecs describe-services --cluster "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-cluster" --services "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-service")
+              VPC_CONF_OBJ=$(echo $SERVICES_OBJ | jq '.services[].networkConfiguration.awsvpcConfiguration')
+              SUBNET_ONE=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[0]')
+              SUBNET_TWO=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[1]')
+              SECURITY_GROUP_IDS=$(echo "$VPC_CONF_OBJ" |  jq '.securityGroups[0]')
+              CLUSTER_NAME=$(echo "$SERVICES_OBJ" |  jq '.services[].clusterArn')
+              echo "export SUBNET_ONE=$SUBNET_ONE" >> $BASH_ENV
+              echo "export SUBNET_TWO=$SUBNET_TWO" >> $BASH_ENV
+              echo "export SECURITY_GROUP_IDS_FETCHED=$SECURITY_GROUP_IDS_FETCHED" >> $BASH_ENV
+              echo "export CLUSTER_NAME=$CLUSTER_NAME" >> $BASH_ENV
+        - run:
+            name: Associate cluster
+            command: |
+              aws ecs put-cluster-capacity-providers \
+                --cluster "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-cluster" \
+                --capacity-providers FARGATE FARGATE_SPOT  \
+                --default-capacity-provider-strategy capacityProvider=FARGATE,weight=1 \
+                --region ${AWS_DEFAULT_REGION}
+        - aws-ecs/run-task:
+              cluster: $CLUSTER_NAME
+              capacity-provider-strategy: capacityProvider=FARGATE,weight=1 capacityProvider=FARGATE_SPOT,weight=1
+              launch-type: ""
+              task-definition: fargate-webapp-task
+              subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
+              security-group-ids: $SECURITY_GROUP_IDS_FETCHED
 
 workflows:
-# Log into AWS, build and push image to Amazon ECR
-  build_and_push_image:
+  run-task:
     jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          # Name of dockerfile to use. Defaults to Dockerfile.
-          dockerfile: Dockerfile
-          # AWS_REGION_ENV_VAR_NAME
-          region: AWS_DEFAULT_REGION
-          # myECRRepository
-          repo: '${MY_APP_PREFIX}'
-          # myECRRepoTag
-          tag: "$CIRCLE_SHA1"
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
-          aws-region: AWS_DEFAULT_REGION
-          family: '${MY_APP_PREFIX}-service'
-          cluster-name: '${MY_APP_PREFIX}-cluster'
-          container-image-name-updates: 'container=${MY_APP_PREFIX}-service,tag=${CIRCLE_SHA1}'
+      - test-fargatespot
