--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
         - run:
             name: Get cluster info
             command: |
-              SERVICES_OBJ=$(aws ecs describe-services --cluster "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-cluster" --services "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-service")
+              SERVICES_OBJ=$(aws ecs describe-services --cluster "${ECS_CLUSTER_NAME}" --services "${ECS_SERVICE_NAME}")
               VPC_CONF_OBJ=$(echo $SERVICES_OBJ | jq '.services[].networkConfiguration.awsvpcConfiguration')
               SUBNET_ONE=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[0]')
               SUBNET_TWO=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[1]')
@@ -30,7 +30,7 @@ jobs:
             name: Associate cluster
             command: |
               aws ecs put-cluster-capacity-providers \
-                --cluster "${AWS_RESOURCE_NAME_PREFIX_FARGATE}-cluster" \
+                --cluster "${ECS_CLUSTER_NAME}" \
                 --capacity-providers FARGATE FARGATE_SPOT  \
                 --default-capacity-provider-strategy capacityProvider=FARGATE,weight=1 \
                 --region ${AWS_DEFAULT_REGION}
