--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
               CLUSTER_NAME=$(echo "$SERVICES_OBJ" |  jq '.services[].clusterArn')
               echo "export SUBNET_ONE=$SUBNET_ONE" >> $BASH_ENV
               echo "export SUBNET_TWO=$SUBNET_TWO" >> $BASH_ENV
-              echo "export SECURITY_GROUP_IDS_FETCHED=$SECURITY_GROUP_IDS_FETCHED" >> $BASH_ENV
+              echo "export SECURITY_GROUP_IDS=$SECURITY_GROUP_IDS" >> $BASH_ENV
               echo "export CLUSTER_NAME=$CLUSTER_NAME" >> $BASH_ENV
         - run:
             name: Associate cluster
