--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,50 @@
 version: '2.1'
 orbs:
   aws-ecs: circleci/aws-ecs@2.0
-jobs:
-  run-task:
-    docker:
-      - image: cibuilds/aws:2.1.27
-      - image: cimg/python:3.8
-    steps:
-      - aws-ecs/run-task:
-          capacity-provider-strategy: >-
-            capacityProvider=FARGATE,weight=1
-            capacityProvider=FARGATE_SPOT,weight=1
-          cluster: ecs-fargate
-          count: 4
-          launch-type: ''
-          security-group-ids: $SECURITY_GROUP_IDS
-          subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
-          task-definition: fargate-webapp-task
-          assign-public-ip : ENABLED         
+  aws-cli: circleci/aws-cli@1.3
+  orb-tools: circleci/orb-tools@10.0
+  shellcheck: circleci/shellcheck@2.2
+  jq: circleci/jq@2.2.0
+
+jobs:   
+  test-fargatespot:
+      docker:
+        - image: cimg/base:stable
+      steps:
+        - aws-cli/setup
+        - jq/install
+        - run:
+            name: Get cluster info
+            command: |
+              SERVICES_OBJ=$(aws ecs describe-services --cluster "${ECS_CLUSTER_NAME}" --services "${ECS_SERVICE_NAME}")
+              VPC_CONF_OBJ=$(echo $SERVICES_OBJ | jq '.services[].networkConfiguration.awsvpcConfiguration')
+              SUBNET_ONE=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[0]')
+              SUBNET_TWO=$(echo "$VPC_CONF_OBJ" |  jq '.subnets[1]')
+              SECURITY_GROUP_IDS=$(echo "$VPC_CONF_OBJ" |  jq '.securityGroups[0]')
+              CLUSTER_NAME=$(echo "$SERVICES_OBJ" |  jq '.services[].clusterArn')
+              echo "export SUBNET_ONE=$SUBNET_ONE" >> $BASH_ENV
+              echo "export SUBNET_TWO=$SUBNET_TWO" >> $BASH_ENV
+              echo "export SECURITY_GROUP_IDS=$SECURITY_GROUP_IDS" >> $BASH_ENV
+              echo "export CLUSTER_NAME=$CLUSTER_NAME" >> $BASH_ENV
+        - run:
+            name: Associate cluster
+            command: |
+              aws ecs put-cluster-capacity-providers \
+                --cluster "${ECS_CLUSTER_NAME}" \
+                --capacity-providers FARGATE FARGATE_SPOT  \
+                --default-capacity-provider-strategy capacityProvider=FARGATE,weight=1 capacityProvider=FARGATE_SPOT,weight=1\
+                --region ${AWS_DEFAULT_REGION}
+        - aws-ecs/run-task:
+              cluster: $CLUSTER_NAME
+              capacity-provider-strategy: capacityProvider=FARGATE,weight=1 capacityProvider=FARGATE_SPOT,weight=1
+              launch-type: ""
+              task-definition: fargate-webapp-task
+              subnet-ids: '$SUBNET_ONE, $SUBNET_TWO'
+              security-group-ids: $SECURITY_GROUP_IDS
+              assign-public-ip : ENABLED
+              count: 10
+
 workflows:
   run-task:
     jobs:
-      - run-task
+      - test-fargatespot
